# feedsync

./: Cargo.toml
migrations/2023-01-31-185654_initial/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs  state.rs
src/feed/: mod.rs
src/web/: api.rs  mod.rs  req.rs  resp.rs
