[package]
name = "feedsync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
chrono = "0.4.23"
clap = "4.1.4"
diesel = { version = "2.0.3", features = ["postgres", "chrono"] }
diesel-async = { version = "0.2.0", features = ["mobc", "postgres"] }
log = "0.4.17"
pretty_env_logger = "0.4.0"
reqwest = "0.11.14"
rss = "2.0.2"
serde = { version = "1.0.152", features = ["derive"] }
snafu = "0.7.4"
tokio = { version = "1.24.2", features = ["full"] }
url = { version = "2.3.1", features = ["serde"] }
